# public-explanation

./: .env.example  .gitignore  README.md  flake.nix  main.py  pyproject.toml
public_explanation/: __init__.py  __main__.py  ai_processor.py  content_processor.py  github_api.py  main.py  models.py  repository.py
